--- a/font/Cargo.toml
+++ b/font/Cargo.toml
@@ -12,7 +12,7 @@ foreign-types = "0.3"
 log = "0.4"
 
 [target.'cfg(not(target_os = "macos"))'.dependencies]
-servo-fontconfig = { git = "https://github.com/jwilm/rust-fontconfig", branch = "updated-2017-10-8" }
+servo-fontconfig = { path = "./rust-fontconfig" }
 freetype-rs = "0.13"
 
 [target.'cfg(target_os = "macos")'.dependencies]
